# RoomEditImproved

./: CMakeLists.txt  CMakeSettings.json  CodeStyle.txt  README.md  TODO.md
common/: mathconstants.h  mathconstants.hh  matrix.inl  result.hh  vector.inl
roomedit/: BBox.cc  BBox.hh  CMakeLists.txt  Document.cc  Document.hh  FreeLookCamera.cc  FreeLookCamera.h  FreeLookCamera.hh  GameWorld.cc  GameWorld.h  GameWorld.hh  InputSystem.hh  OrbitCamera.cc  OrbitCamera.h  OrbitCamera.hh  PackedID.hh  SceneView.cc  SceneView.hh  WorldRenderer.cc  WorldRenderer.hh  main.cc  scene_view.cc  scene_view.h  world_renderer.cc  world_renderer.h
roomedit/shaders/: ColoredPS.hlsl  ColoredSurfaceGraphicsPipeline.cc  ColoredSurfaceGraphicsPipeline.hh  ColoredVS.hlsl  LightMappedPS.hlsl  LightMappedSurfaceGraphicsPipeline.cc  LightMappedSurfaceGraphicsPipeline.hh  LightMappedVS.hlsl  PhongPS.hlsl  PhongSurfaceGraphicsPipeline.cc  PhongSurfaceGraphicsPipeline.hh  PhongVS.hlsl  compile.cmd  globals.hlsl
roomedit/shaders/compiled/: ColoredPS.h  ColoredVS.h  LightMappedPS.h  LightMappedVS.h  PhongPS.h  PhongVS.h
roomedit/ui/: ButtonsPanel.cc  ButtonsPanel.hh  PropertyGrid.cc  PropertyGrid.hh  StatusBar.cc  StatusBar.hh  TreeView.cc  TreeView.hh  colors.h
roomedit/world/: Actor.cc  Actor.hh  ActorWAD.cc  ActorWAD.hh  Emitter.cc  Emitter.hh  Light.cc  Light.hh  Mesh.cc  Mesh.hh  Object.hh  ObjectProperties.hh  Room.cc  Room.hh  SpotEffect.cc  SpotEffect.hh  SurfaceMaterial.hh  SurfaceProperty.hh  TextureInformation.cc  TextureInformation.hh  Vector3.hh  common.cc  common.hh
sbaudio/: CMakeLists.txt
sbfilesystem/: CMakeLists.txt  ReadStream.cc  ReadStream.h  ReadStream.hh
sbgraphics/: CMakeLists.txt  sbRTRenderer.cc  sbRTRenderer.hh  sbRasterRenderer.cc  sbRasterRenderer.h  sbRasterRenderer.hh  sbRenderer.h  sbRenderer.hh
sbgraphics/base/: HeapManager.cc  HeapManager.hh  d3dx12.h  d3dx12.hh  engineFeatures.cc  engineFeatures.h  engineFeatures.hh  sbBaseRenderer.cc  sbBaseRenderer.h  sbBaseRenderer.hh
sbgraphics/base/heap/: DynamicHeap.cc  DynamicHeap.hh  UploadHeap.cc  UploadHeap.hh
sbgraphics/shaders/: CommandPrompt.lnk  compile.cmd  globals.hlsl  psColor.h  psColor.hlsl  vsScreenColored.h  vsScreenColored.hlsl
sbinput/: CMakeLists.txt  InputCollector.cc  InputCollector.h
sbmemory/: Array.hh  CMakeLists.txt  FixedArray.inl  MemoryPool.cc  MemoryPool.h  MemoryPool.hh
sbmemory/internal/: Array.h
